src/test/ui/functional-struct-update/functional-struct-update-respects-privacy.stderr
error[E0451]: field `secret_uid` of struct `foo::S` is private
  --> $DIR/functional-struct-update-respects-privacy.rs:28:49
   |
LL |     pub struct S { pub a: u8, pub b: String, secret_uid: u64 }
   |     ---------------------------------------------------------- `foo::S` defined here
...
LL |     let s_2 = foo::S { b: format!("ess two"), ..s_1 }; // FRU ...
   |               ----------------------------------^^^--
   |               |                                 |
   |               |                                 private field
   |               `foo::S` cannot be built due to private field

error: aborting due to previous error

For more information about this error, try `rustc --explain E0451`.
